--- a/README
+++ b/README
@@ -29,7 +29,7 @@ deployment of SIF easy.
 == Implementation Information (sifinfo.org)
 
 This implementation is based on version 2.2 of the SIF Specification. The 
-Specification is in {PDF}[link:../doc/SIF%20ImplementationSpecification.pdf] format 
+Specification is in {PDF}[link:../SIF%20ImplementationSpecification.pdf] format 
 inside the doc folder.
 
 
@@ -64,4 +64,4 @@ Document everything.
 Author:: Clint Hill
 Email:: mailto://clint.hill@h3osoftware.com
 Home Page:: http://h3osoftware.com/siffer
-SVN:: http://svn.h3osoftware.com/siffer
+GitHub:: git://github.com/clinth3o/siffer.git
