--- a/README
+++ b/README
@@ -65,3 +65,4 @@ Author:: Clint Hill
 Email:: mailto://clint.hill@h3osoftware.com
 Home Page:: http://h3osoftware.com/siffer
 GitHub:: git://github.com/clinth3o/siffer.git
+RubyForge:: http://rubyforge.org/projects/siffer/
