transitioning to AcDc for Messages.

--- a/README
+++ b/README
@@ -35,6 +35,9 @@ through the URI and URL of ZIS and Agent components.
 Make SIF more useful. As much as possible remove the "XML" and "Database" 
 questions out of the equation. 
 
+Make it simple. Make it easy. Make it fun. Make it intuitive. 
+Make it do exactly what needs to be done.
+You're too busy for anything else.
 
 == Implementation Information (sifinfo.org)
 
